[package]
name = "OxideVault"
authors = ["Vianpyro"]
version = "0.1.0"
edition = "2024"

[dependencies]
poise = "0.6.1"
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
dotenv = "0.15.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
